--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="wpOceans">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
-    <title> Habibi - Wedding & Wedding Planner HTML5 Template</title>
+    <title> WEDDING INVITATION</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
@@ -53,13 +53,16 @@
                             <div class="col-xl-6 col-lg-6 col-12">
                                 <div class="wpo-static-hero-inner">
                                     <div class="slide-title-sub wow fadeInUp" data-wow-duration="1400ms">
-                                        <h3>Lucas & Mia</h3>
+                                        <h3>Văn Việt ❤ Hoàng Sơn</h3>
                                     </div>
                                     <div class="slide-title wow fadeInUp" data-wow-duration="1500ms">
-                                        <h2>Save the Date</h2>
+                                        <h2>Mời bạn đến dự đám cưới</h2>
                                     </div>
                                     <div data-swiper-parallax="400" class="slide-text wow fadeInUp" data-wow-duration="1600ms">
-                                        <p>We Are Getting Married November 15,2024</p>
+                                        <p>Ngày 31/12/2023, Chủ nhật, 11h00</p>
+                                    </div>
+                                    <div data-swiper-parallax="400" class="slide-text wow fadeInUp" data-wow-duration="1600ms">
+                                        <p>Tại nhà hàng tiệc cưới Trung Sơn</p>
                                     </div>
                                     <div class="shape-2 wow fadeInUp" data-wow-duration="1800ms"><img src="assets/images/slider/shape2.svg" alt=""></div>
                                     <div class="clearfix"></div>
@@ -167,7 +170,7 @@
                                                 </svg>
                                             </div>
                                             <div class="couple-text">
-                                                <h3>Jane Margrate</h3>
+                                                <h3>Hoàng Sơn</h3>
                                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna orci auctor vitae nisl. Erat fringilla pellentesque amet tempus. Commodo mi vitae, sagittis blandit.
                                                 </p>
                                                 <div class="social">
@@ -198,7 +201,7 @@
                                                 </svg>
                                             </div>
                                             <div class="couple-text">
-                                                <h3>Robert Peter</h3>
+                                                <h3>Văn Việt</h3>
                                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna orci auctor vitae nisl. Erat fringilla pellentesque amet tempus. Commodo mi vitae, sagittis blandit.
                                                 </p>
                                                 <div class="social">
@@ -234,8 +237,8 @@
         <section class="wpo-story-section-s2 section-padding" id="story">
             <div class="container">
                 <div class="wpo-section-title">
-                    <span>Our Story</span>
-                    <h2>How it Happened</h2>
+                    <span>Câu chuyện của chúng ta</span>
+                    <h2>Nó xảy ra như thế nào</h2>
                 </div>
                 <div class="wpo-story-wrap">
                     <div class="wpo-story-item">
@@ -253,7 +256,7 @@
                                             <img src="assets/images/story/pin.svg" alt="">
                                         </div>
                                     </div>
-                                    <h2>How we meet</h2>
+                                    <h3>Chúng ta gặp nhau như thế nào</h3>
                                     <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim tortor, faucibus netus orci donec volutpat adipiscing. Sit condimentum elit convallis libero. Nunc in eu tellus ipsum placerat.</p>
                                     <div class="flower">
                                         <img src="assets/images/story/flower.svg" alt="">
@@ -289,7 +292,7 @@
                                             <img src="assets/images/story/pin.svg" alt="">
                                         </div>
                                     </div>
-                                    <h2>He proposed, I said yes</h2>
+                                    <h3>Anh ngỏ lời, tôi đồng ý</h3>
                                     <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim tortor, faucibus netus orci donec volutpat adipiscing. Sit condimentum elit convallis libero. Nunc in eu tellus ipsum placerat.</p>
                                     <div class="flower">
                                         <img src="assets/images/story/flower-2.svg" alt="">
@@ -325,7 +328,7 @@
                                             <img src="assets/images/story/pin.svg" alt="">
                                         </div>
                                     </div>
-                                    <h2>Our Engagement Day</h2>
+                                    <h3>Ngày đính hôn của chúng tôi</h3>
                                     <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim tortor, faucibus netus orci donec volutpat adipiscing. Sit condimentum elit convallis libero. Nunc in eu tellus ipsum placerat.</p>
                                     <div class="flower">
                                         <img src="assets/images/story/flower.svg" alt="">
@@ -443,8 +446,8 @@
         <section class="wpo-team-section section-padding pt-0">
             <div class="container">
                 <div class="wpo-section-title">
-                    <span>Important Persons</span>
-                    <h2>Bridesmaids & Groomsmen</h2>
+                    <span>Người quan trọng</span>
+                    <h2>Bên cô dâu & Bên chú rể</h2>
                 </div>
                 <div class="wpo-team-wrap scene-2" id="scene-2">
                     <div class="row">
@@ -463,8 +466,8 @@
                                     </div>
                                 </div>
                                 <div class="wpo-team-text">
-                                    <h3><a href="team-single.html">Jenny Wilson</a></h3>
-                                    <span>Bridesmaid</span>
+                                    <h3><a href="team-single.html">Huỳnh Thị Thanh</a></h3>
+                                    <span>Mẹ cô dâu</span>
                                 </div>
                             </div>
                         </div>
@@ -483,8 +486,8 @@
                                     </div>
                                 </div>
                                 <div class="wpo-team-text">
-                                    <h3><a href="team-single.html">Robert Fox</a></h3>
-                                    <span>Groomsmen</span>
+                                    <h3><a href="team-single.html">Nguyễn Năng</a></h3>
+                                    <span>Cha cô dâu</span>
                                 </div>
                             </div>
                         </div>
@@ -503,8 +506,8 @@
                                     </div>
                                 </div>
                                 <div class="wpo-team-text">
-                                    <h3><a href="team-single.html">Annette Black</a></h3>
-                                    <span>Bridesmaids</span>
+                                    <h3><a href="team-single.html">Biện Văn Tỵ</a></h3>
+                                    <span>Cha chú rể</span>
                                 </div>
                             </div>
                         </div>
@@ -523,8 +526,8 @@
                                     </div>
                                 </div>
                                 <div class="wpo-team-text">
-                                    <h3><a href="team-single.html">Jenefer Abram</a></h3>
-                                    <span>Groomsmen</span>
+                                    <h3><a href="team-single.html">Lê Thị Huệ </a></h3>
+                                    <span>Mẹ chú rể</span>
                                 </div>
                             </div>
                         </div>
@@ -638,8 +641,8 @@
         <section class="wpo-event-section section-padding" id="event">
             <div class="container">
                 <div class="wpo-section-title">
-                    <span>Our Wedding</span>
-                    <h2>When & Where</h2>
+                    <span>Đám cưới của chúng tôi</span>
+                    <h2>Thời gian & Địa điểm </h2>
                 </div>
                 <div class="wpo-event-wrap">
                     <div class="row">
@@ -652,14 +655,14 @@
                                 </div>
                                 <div class="wpo-event-text">
                                     <div class="title">
-                                        <h2>The Reception</h2>
+                                        <h2>Lễ vu quy</h2>
                                     </div>
                                     <ul>
-                                        <li>Monday, 12 Apr. 2022 <br> 1:00 PM – 2:30 PM</li>
-                                        <li>4517 Washington Ave. Manchester, Kentucky 39495</li>
-                                        <li>+1 234-567-8910</li>
-                                        <li> <a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">See
-                                                Location</a></li>
+                                        <li>Thứ 4, Ngày 20/12/2023 <br> 10:00 AM</li>
+                                        <li><h4>Tư gia nữ</h4></li>
+                                        <li>Tổ 4, Thôn Túy Loan Đông 1, Hòa Phong, Hòa Vang, TP Đà Nẵng</li>
+                                        <li>0706 097 503</li>
+                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/7ugdkVBAqQEJwEBr7">Xem địa chỉ</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -673,14 +676,14 @@
                                 </div>
                                 <div class="wpo-event-text">
                                     <div class="title">
-                                        <h2>The Ceremony</h2>
+                                        <h2>Lễ thành hôn</h2>
                                     </div>
                                     <ul>
-                                        <li>Monday, 12 Apr. 2022 <br> 1:00 PM – 2:30 PM</li>
-                                        <li>4517 Washington Ave. Manchester, Kentucky 39495</li>
-                                        <li>+1 234-567-8910</li>
-                                        <li> <a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">See
-                                                Location</a></li>
+                                        <li>Thứ 5, Ngày 28/12/2023 <br> 10:00 AM </li>
+                                        <li><h4>Tư gia nam</h4></li>
+                                        <li>Thôn Tân Vĩnh Cần, Tân Hưng, Cẩm Thành, Cẩm Xuyên, Hà Tĩnh </li>
+                                        <li>0706 097 503</li>
+                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/DPxtE1AvxFwgKXaL8">Xem địa chỉ</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -694,14 +697,14 @@
                                 </div>
                                 <div class="wpo-event-text">
                                     <div class="title">
-                                        <h2>The Party</h2>
+                                        <h2>Đãi tiệc</h2>
                                     </div>
                                     <ul>
-                                        <li>Monday, 12 Apr. 2022 <br> 1:00 PM – 2:30 PM</li>
-                                        <li>4517 Washington Ave. Manchester, Kentucky 39495</li>
-                                        <li>+1 234-567-8910</li>
-                                        <li> <a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">See
-                                                Location</a></li>
+                                        <li>Chủ nhật, Ngày 31/12/2023 <br> 11:00 AM</li>
+                                        <li><h4>Nhà hàng Trung Sơn</h4></li>
+                                        <li>Cầu Giăng, Hòa Nhơn, Hòa Vang, TP Đà Nẵng</li>
+                                        <li>0706 097 503</li>
+                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/qRoMoqLmJegAWzj67">Xem địa chỉ</a></li>
                                     </ul>
                                 </div>
                             </div>
