--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="wpOceans">
+    <meta property="og:type" content="website" />
+    <meta content="Văn Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" name="Title" />
+    <meta content="Ngày 31/12/2023, Chủ nhật, Lúc 11h00" name="Description" />
+    <meta content="Ngày 31/12/2023, Chủ nhật, Lúc 11h00" name="Keyword" />
+    <meta property="og:title" content="Văn Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" />
+    <meta property="og:description" content="Ngày 31/12/2023, Chủ nhật, Lúc 11h00" />
+    <meta property="og:url" content="https://18thanhthuy18.github.io/-wedding-invaitation/" />
+    <meta name="theme-color" content="#BCAAA4" />
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
-    <title> WEDDING INVITATION</title>
+    <title>Văn Việt❤Hoàng Sơn Mời bạn đến dự đám cưới</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
