--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <meta property="og:description" content="Ngày 31/12/2023, Chủ nhật, Lúc 11h00" />
     <meta property="og:url" content="https://18thanhthuy18.github.io/-wedding-invaitation/" />
     <meta name="theme-color" content="#BCAAA4" />
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons8-love-letter-32.png">
+    <link rel="icon" type="image/png" href="assets/images/icons8-love-letter-32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/images/icons8-love-letter-32.png" sizes="16x16">
     <title>Văn Việt❤Hoàng Sơn Mời bạn đến dự đám cưới</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
