--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             </div>
         </div>
         <!-- end preloader -->
+        <!-- <audio src="https://sample-videos.com/audio/mp3/crowd-cheering.mp3" controls autoplay muted ></audio> -->
         <!-- start of hero -->
         <section class="static-hero-s2">
             <div class="hero-container">
@@ -456,7 +457,7 @@
         <section class="wpo-team-section section-padding pt-0">
             <div class="container">
                 <div class="wpo-section-title">
-                    <span>Người quan trọng</span>
+                    <span>Song thân phụ mẫu</span>
                     <h2>Bên cô dâu & Bên chú rể</h2>
                 </div>
                 <div class="wpo-team-wrap scene-2" id="scene-2">
@@ -497,7 +498,7 @@
                                 </div>
                                 <div class="wpo-team-text">
                                     <h3><a href="team-single.html">Nguyễn Năng</a></h3>
-                                    <span>Cha cô dâu</span>
+                                    <span>Bố cô dâu</span>
                                 </div>
                             </div>
                         </div>
@@ -517,7 +518,7 @@
                                 </div>
                                 <div class="wpo-team-text">
                                     <h3><a href="team-single.html">Biện Văn Tỵ</a></h3>
-                                    <span>Cha chú rể</span>
+                                    <span>Bố chú rể</span>
                                 </div>
                             </div>
                         </div>
