--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="author" content="wpOceans">
     <meta property="og:type" content="website" />
     <meta content="Văn Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" name="Title" />
-    <meta content="Ngày 31/12/2023, Chủ nhật, Lúc 11h00" name="Description" />
-    <meta content="Ngày 31/12/2023, Chủ nhật, Lúc 11h00" name="Keyword" />
+    <meta content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" name="Description" />
+    <meta content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" name="Keyword" />
     <meta property="og:title" content="Văn Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" />
-    <meta property="og:description" content="Ngày 31/12/2023, Chủ nhật, Lúc 11h00" />
+    <meta property="og:description" content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" />
     <meta property="og:url" content="https://18thanhthuy18.github.io/-wedding-invaitation/" />
     <meta name="theme-color" content="#BCAAA4" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons8-love-letter-32.png">
@@ -70,7 +70,7 @@
                                         <h2>Mời bạn đến dự đám cưới</h2>
                                     </div>
                                     <div data-swiper-parallax="400" class="slide-text wow fadeInUp" data-wow-duration="1600ms">
-                                        <p>Ngày 31/12/2023, Chủ nhật, 11h00</p>
+                                        <p>Ngày 31/12/2023, Chủ nhật, 10h30</p>
                                     </div>
                                     <div data-swiper-parallax="400" class="slide-text wow fadeInUp" data-wow-duration="1600ms">
                                         <p>Tại nhà hàng tiệc cưới Trung Sơn</p>
@@ -549,104 +549,6 @@
         </section>
         <!-- end wpo-team-section -->
 
-        <!-- start of wpo-contact-section -->
-        <section class="wpo-contact-section-s2 section-padding">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col col-xl-4 col-lg-6 col-md-6 col-12">
-                        <div class="wpo-contact-section-wrapper">
-                            <div class="wpo-section-title">
-                                <h2>Are You Attending?</h2>
-                            </div>
-                            <div class="wpo-contact-form-area">
-                                <form method="post" class="contact-validation-active" id="contact-form-main">
-                                    <div>
-                                        <input type="text" class="form-control" name="name" id="name" placeholder="Name">
-                                    </div>
-                                    <div>
-                                        <input type="email" class="form-control" name="email" id="email" placeholder="Email">
-                                    </div>
-                                    <div class="radio-buttons">
-                                        <p>
-                                            <input type="radio" id="attend" name="radio-group" checked>
-                                            <label for="attend">Yes, I will be there</label>
-                                        </p>
-                                        <p>
-                                            <input type="radio" id="not" name="radio-group">
-                                            <label for="not">Sorry, I can’t come</label>
-                                        </p>
-                                    </div>
-                                    <div>
-                                        <select name="guest" class="form-control">
-                                            <option disabled="disabled" selected>Number Of Guests</option>
-                                            <option>01</option>
-                                            <option>02</option>
-                                            <option>03</option>
-                                            <option>04</option>
-                                            <option>05</option>
-                                        </select>
-                                    </div>
-                                    <div>
-                                        <input type="text" class="form-control" name="what" id="what" placeholder="What Will You Be Attending">
-                                    </div>
-                                    <div>
-                                        <select name="meal" class="form-control last">
-                                            <option disabled="disabled" selected>Meal Preferences</option>
-                                            <option>Chicken Soup</option>
-                                            <option>Motton Kabab</option>
-                                            <option>Chicken BBQ</option>
-                                            <option>Mix Salad</option>
-                                            <option>Beef Ribs </option>
-                                        </select>
-                                    </div>
-                                    <div class="submit-area">
-                                        <button type="submit" class="theme-btn">RSVP</button>
-                                        <div id="c-loader">
-                                            <i class="ti-reload"></i>
-                                        </div>
-                                    </div>
-                                    <div class="clearfix error-handling-messages">
-                                        <div id="success">Thank you, Message Send</div>
-                                        <div id="error"> Error occurred while sending email. Please try again later.
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="bottom-bg">
-                <svg viewBox="0 0 1920 634" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path class="bg-path"
-                        d="M207 286C162.2 87.6 39 44.6667 -17 48L-91 22L-71 726H13L1977 670L1957 424C1926.6 318.4 1815 392 1763 442C1619.8 570 1503.33 495.333 1463 442C1270.2 162.8 1197.33 325.667 1185 442C1159.4 584.4 1117 537.333 1099 496C953.4 192.8 868.333 328.333 844 434C791.2 649.2 649.333 555.667 585 482C455.4 356.4 380.333 429.667 359 482C315 616.4 273.333 547.333 258 496L207 286Z"
-                        fill="" />
-                    <path class="bg-stroke"
-                        d="M207 266C162.2 67.6 39 24.6667 -17 28L-91 2L-71 706H13L1977 650L1957 404C1926.6 298.4 1815 372 1763 422C1619.8 550 1503.33 475.333 1463 422C1270.2 142.8 1197.33 305.667 1185 422C1159.4 564.4 1117 517.333 1099 476C953.4 172.8 868.333 308.333 844 414C791.2 629.2 649.333 535.667 585 462C455.4 336.4 380.333 409.667 359 462C315 596.4 273.333 527.333 258 476L207 266Z"
-                        stroke="" stroke-width="2" />
-                </svg>
-
-                <div class="shape-1">
-                    <img src="assets/images/rsvp/shape.svg" alt="">
-                </div>
-                <div class="shape-2 wow fadeInUp" data-wow-duration="1000ms">
-                    <img src="assets/images/rsvp/shape2.svg" alt="">
-                </div>
-                <div class="shape-3 wow fadeInUp" data-wow-duration="1200ms">
-                    <img src="assets/images/rsvp/shape3.svg" alt="">
-                </div>
-                <div class="shape-4 wow fadeInUp" data-wow-duration="1400ms">
-                    <img src="assets/images/rsvp/shape4.svg" alt="">
-                </div>
-                <div class="shape-5 wow fadeInUp" data-wow-duration="1600ms">
-                    <img src="assets/images/rsvp/shape5.svg" alt="">
-                </div>
-                <div class="shape-6 wow fadeInUp" data-wow-duration="1800ms">
-                    <img src="assets/images/rsvp/shape6.svg" alt="">
-                </div>
-            </div>
-        </section>
-        <!-- end of wpo-contact-section -->
 
         <!-- start wpo-event-section -->
         <section class="wpo-event-section section-padding" id="event">
@@ -727,7 +629,52 @@
             <!-- end container -->
         </section>
         <!-- end wpo-event-section -->
+        <!-- start of hero -->
+        <section class="wpo-invitation-area-s2" style="background: url(./assets/images/slider/invitation-bg2.jpg) no-repeat center center;  background-size: cover;">
+            <div class="hero-container">
+                <div class="hero-inner">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-12">
+                                <div class="wpo-event-wrap">
+                                    <div class="wpo-event-item">
+                                        <div class="wpo-event-text">
+                                            <h2>Văn Việt ❤ Hoàng Sơn</h2>
+                                            <span>Ngày trọng đại của chúng tôi là ngày 31 tháng 12 năm 2023</span>
+                                            </br>
+                                            <span>Mời bạn đến chung vui cùng chúng tôi</span>
+                                            <div class="inner-shape">
+                                                <img src="assets/images/slider/shape15.svg" alt="">
+                                            </div>
+                                            <ul>
+                                                <li>Chủ nhật, Ngày 31/12/2023 <br> 10:30 AM </li>
+                                                <li>Nhà hàng Trung Sơn, Cầu Giăng, Hòa Nhơn, Hòa Văng, TP Đà Nẵng</li>
+                                                <li>0706 097 503</li>
+                                                <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/qRoMoqLmJegAWzj67">Xem địa chỉ</a></li>
 
+                                            </ul>
+                                        </div>
+                                        <div class="shape-1"><img src="assets/images/slider/corner1.svg" alt="">
+                                        </div>
+                                        <div class="shape-2"><img src="assets/images/slider/corner2.svg" alt="">
+                                        </div>
+                                        <div class="shape-3"><img src="assets/images/slider/corner3.svg" alt="">
+                                        </div>
+                                        <div class="shape-4"><img src="assets/images/slider/corner4.svg" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="frame-shape-1"><img src="assets/images/slider/shape13.svg" alt="">
+                                    </div>
+                                    <div class="frame-shape-2"><img src="assets/images/slider/shape14.svg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end of hero slider -->
         <div class="color-switcher-wrap">
             <div class="color-switcher-item">
                 <div class="color-toggle-btn">
