--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" name="Keyword" />
     <meta property="og:title" content="Văn Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" />
     <meta property="og:description" content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" />
-    <meta property="og:url" content="https://18thanhthuy18.github.io/-wedding-invaitation/" />
+    <meta property="og:url" content="https://18thanhthuy18.github.io/wedding-invaitation/" />
+    <meta property="og:image" content="assets/images/icons8-love-letter-32.png" />
     <meta name="theme-color" content="#BCAAA4" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons8-love-letter-32.png">
     <link rel="icon" type="image/png" href="assets/images/icons8-love-letter-32.png" sizes="32x32">
