--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta property="og:title" content="Văn Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" />
     <meta property="og:description" content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" />
     <meta property="og:url" content="https://18thanhthuy18.github.io/wedding-invaitation/" />
-    <meta property="og:image" content="https://www.marthastewart.com/thmb/Jmpu6jLph6v5a8qkaaZhAOVvyRc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/susan-tony-vow-renewal-ceremony-0920-89e495f9d4404da8984dee4707a300ce.jpg" />
+    <!-- <meta property="og:image" content="https://www.marthastewart.com/thmb/Jmpu6jLph6v5a8qkaaZhAOVvyRc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/susan-tony-vow-renewal-ceremony-0920-89e495f9d4404da8984dee4707a300ce.jpg" /> -->
+    <meta property="og:image" content="https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/homepagefe/26c9324913c021677768c36975d635ef.png" />
     <meta name="theme-color" content="#BCAAA4" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons8-love-letter-32.png">
     <link rel="icon" type="image/png" href="assets/images/icons8-love-letter-32.png" sizes="32x32">
