--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                                         <h2>Lễ vu quy</h2>
                                     </div>
                                     <ul>
-                                        <li>Thứ 4, Ngày 20/12/2023 <br> 10:00 AM</li>
+                                        <li>Thứ 4, Ngày 20/12/2023 <br> 09:00 AM</li>
                                         <li><h4>Tư gia nữ</h4></li>
                                         <li>Tổ 4, Thôn Túy Loan Đông 1, Hòa Phong, Hòa Vang, TP Đà Nẵng</li>
                                         <li>0706 097 503</li>
@@ -615,7 +615,7 @@
                                         <h2>Đãi tiệc</h2>
                                     </div>
                                     <ul>
-                                        <li>Chủ nhật, Ngày 31/12/2023 <br> 11:00 AM</li>
+                                        <li>Chủ nhật, Ngày 31/12/2023 <br> 10:30 AM</li>
                                         <li><h4>Nhà hàng Trung Sơn</h4></li>
                                         <li>Cầu Giăng, Hòa Nhơn, Hòa Vang, TP Đà Nẵng</li>
                                         <li>0706 097 503</li>
@@ -650,7 +650,7 @@
                                             </div>
                                             <ul>
                                                 <li>Chủ nhật, Ngày 31/12/2023 <br> 10:30 AM </li>
-                                                <li>Nhà hàng Trung Sơn, Cầu Giăng, Hòa Nhơn, Hòa Văng, TP Đà Nẵng</li>
+                                                <li>Nhà hàng Trung Sơn, Cầu Giăng, Hòa Nhơn, Hòa Vang, TP Đà Nẵng</li>
                                                 <li>0706 097 503</li>
                                                 <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/qRoMoqLmJegAWzj67">Xem địa chỉ</a></li>
 
