--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="wpOceans">
     <meta property="og:type" content="website" />
-    <meta content="Văn Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" name="Title" />
+    <meta content="Biện Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" name="Title" />
     <meta content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" name="Description" />
     <meta content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" name="Keyword" />
-    <meta property="og:title" content="Văn Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" />
+    <meta property="og:title" content="Biện Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" />
     <meta property="og:description" content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" />
     <meta property="og:url" content="https://18thanhthuy18.github.io/wedding-invaitation/" />
     <meta property="og:image" content="https://www.marthastewart.com/thmb/Jmpu6jLph6v5a8qkaaZhAOVvyRc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/susan-tony-vow-renewal-ceremony-0920-89e495f9d4404da8984dee4707a300ce.jpg" />
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons8-love-letter-32.png">
     <link rel="icon" type="image/png" href="assets/images/icons8-love-letter-32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="assets/images/icons8-love-letter-32.png" sizes="16x16">
-    <title>Văn Việt❤Hoàng Sơn Mời bạn đến dự đám cưới</title>
+    <title>Biện Việt❤Hoàng Sơn Mời bạn đến dự đám cưới</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
@@ -66,7 +66,7 @@
                             <div class="col-xl-6 col-lg-6 col-12">
                                 <div class="wpo-static-hero-inner">
                                     <div class="slide-title-sub wow fadeInUp" data-wow-duration="1400ms">
-                                        <h3>Văn Việt ❤ Hoàng Sơn</h3>
+                                        <h3>Biện Việt ❤ Hoàng Sơn</h3>
                                     </div>
                                     <div class="slide-title wow fadeInUp" data-wow-duration="1500ms">
                                         <h2>Mời bạn đến dự đám cưới</h2>
@@ -214,7 +214,7 @@
                                                 </svg>
                                             </div>
                                             <div class="couple-text">
-                                                <h3>Văn Việt</h3>
+                                                <h3>Biện Việt</h3>
                                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna orci auctor vitae nisl. Erat fringilla pellentesque amet tempus. Commodo mi vitae, sagittis blandit.
                                                 </p>
                                                 <div class="social">
@@ -598,7 +598,7 @@
                                         <li><h4>Tư gia nam</h4></li>
                                         <li>Thôn Tân Vĩnh Cần, Tân Hưng, Cẩm Thành, Cẩm Xuyên, Hà Tĩnh </li>
                                         <li>0706 097 503</li>
-                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/DPxtE1AvxFwgKXaL8">Xem địa chỉ</a></li>
+                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/gtuhV8drpJxNz1wu5">Xem địa chỉ</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -641,7 +641,7 @@
                                 <div class="wpo-event-wrap">
                                     <div class="wpo-event-item">
                                         <div class="wpo-event-text">
-                                            <h2>Văn Việt ❤ Hoàng Sơn</h2>
+                                            <h2>Biện Việt ❤ Hoàng Sơn</h2>
                                             <span>Ngày trọng đại của chúng tôi là ngày 31 tháng 12 năm 2023</span>
                                             </br>
                                             <span>Mời bạn đến chung vui cùng chúng tôi</span>
