--- a/index.html
+++ b/index.html
@@ -576,8 +576,8 @@
                                         <li>Thứ 4, Ngày 20/12/2023 <br> 09:00 AM</li>
                                         <li><h4>Tư gia nữ</h4></li>
                                         <li>Tổ 4, Thôn Túy Loan Đông 1, Hòa Phong, Hòa Vang, TP Đà Nẵng</li>
-                                        <li>0706 097 503</li>
-                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/7ugdkVBAqQEJwEBr7">Xem địa chỉ</a></li>
+                                        <li><a href="tel:0706097503"><i class="ti-mobile"></i> 0706 097 503 </a></li>
+                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/7ugdkVBAqQEJwEBr7"><i class="ti-map-alt"></i> Xem địa chỉ</a></li> 
                                     </ul>
                                 </div>
                             </div>
