--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property="og:title" content="Biện Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" />
     <meta property="og:description" content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" />
     <meta property="og:url" content="https://18thanhthuy18.github.io/wedding-invaitation/" />
-    <meta property="og:image" content="https://www.marthastewart.com/thmb/Jmpu6jLph6v5a8qkaaZhAOVvyRc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/susan-tony-vow-renewal-ceremony-0920-89e495f9d4404da8984dee4707a300ce.jpg" />
-    <!-- <meta property="og:image" content="https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/homepagefe/26c9324913c021677768c36975d635ef.png" /> -->
+    <!-- <meta property="og:image" content="https://www.marthastewart.com/thmb/Jmpu6jLph6v5a8qkaaZhAOVvyRc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/susan-tony-vow-renewal-ceremony-0920-89e495f9d4404da8984dee4707a300ce.jpg" /> -->
+    <meta property="og:image" content="https://s.pinimg.com/images/facebook_share_image.png" />
     <meta name="theme-color" content="#BCAAA4" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons8-love-letter-32.png">
     <link rel="icon" type="image/png" href="assets/images/icons8-love-letter-32.png" sizes="32x32">
@@ -577,7 +577,7 @@
                                         <li><h4>Tư gia nữ</h4></li>
                                         <li>Tổ 4, Thôn Túy Loan Đông 1, Hòa Phong, Hòa Vang, TP Đà Nẵng</li>
                                         <li><a href="tel:0706097503"><i class="ti-mobile"></i> 0706 097 503 </a></li>
-                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/7ugdkVBAqQEJwEBr7"><i class="ti-map-alt"></i> Xem địa chỉ</a></li> 
+                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/7ugdkVBAqQEJwEBr7"><i class="ti-map-alt"></i> <i class="ti-map-alt"></i> Xem địa chỉ</a></li> 
                                     </ul>
                                 </div>
                             </div>
@@ -597,8 +597,8 @@
                                         <li>Thứ 5, Ngày 28/12/2023 <br> 10:00 AM </li>
                                         <li><h4>Tư gia nam</h4></li>
                                         <li>Thôn Tân Vĩnh Cần, Tân Hưng, Cẩm Thành, Cẩm Xuyên, Hà Tĩnh </li>
-                                        <li>0706 097 503</li>
-                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/gtuhV8drpJxNz1wu5">Xem địa chỉ</a></li>
+                                        <li><a href="tel:0706097503"><i class="ti-mobile"></i> 0706 097 503 </a></li>
+                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/gtuhV8drpJxNz1wu5"><i class="ti-map-alt"></i> Xem địa chỉ</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -618,8 +618,8 @@
                                         <li>Chủ nhật, Ngày 31/12/2023 <br> 10:30 AM</li>
                                         <li><h4>Nhà hàng Trung Sơn</h4></li>
                                         <li>Cầu Giăng, Hòa Nhơn, Hòa Vang, TP Đà Nẵng</li>
-                                        <li>0706 097 503</li>
-                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/qRoMoqLmJegAWzj67">Xem địa chỉ</a></li>
+                                        <li><a href="tel:0706097503"><i class="ti-mobile"></i> 0706 097 503 </a></li>
+                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/qRoMoqLmJegAWzj67"><i class="ti-map-alt"></i> Xem địa chỉ</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -651,8 +651,8 @@
                                             <ul>
                                                 <li>Chủ nhật, Ngày 31/12/2023 <br> 10:30 AM </li>
                                                 <li>Nhà hàng Trung Sơn, Cầu Giăng, Hòa Nhơn, Hòa Vang, TP Đà Nẵng</li>
-                                                <li>0706 097 503</li>
-                                                <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/qRoMoqLmJegAWzj67">Xem địa chỉ</a></li>
+                                                <li><a href="tel:0706097503"><i class="ti-mobile"></i> 0706 097 503 </a></li>
+                                                <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/qRoMoqLmJegAWzj67"><i class="ti-map-alt"></i> Xem địa chỉ</a></li>
 
                                             </ul>
                                         </div>
