--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                     </div>
                                 </div>
                                 <div class="wpo-team-text">
-                                    <h3><a href="team-single.html">Huỳnh Thị Thanh</a></h3>
+                                    <h3>Huỳnh Thị Thanh</h3>
                                     <span>Mẹ cô dâu</span>
                                 </div>
                             </div>
@@ -498,7 +498,7 @@
                                     </div>
                                 </div>
                                 <div class="wpo-team-text">
-                                    <h3><a href="team-single.html">Nguyễn Năng</a></h3>
+                                    <h3>Nguyễn Năng</h3>
                                     <span>Bố cô dâu</span>
                                 </div>
                             </div>
@@ -518,7 +518,7 @@
                                     </div>
                                 </div>
                                 <div class="wpo-team-text">
-                                    <h3><a href="team-single.html">Biện Văn Tỵ</a></h3>
+                                    <h3>Biện Văn Tỵ</h3>
                                     <span>Bố chú rể</span>
                                 </div>
                             </div>
@@ -538,7 +538,7 @@
                                     </div>
                                 </div>
                                 <div class="wpo-team-text">
-                                    <h3><a href="team-single.html">Lê Thị Huệ </a></h3>
+                                    <h3>Lê Thị Huệ</h3>
                                     <span>Mẹ chú rể</span>
                                 </div>
                             </div>
