--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                             </div>
                                             <div class="couple-text">
                                                 <h3>Hoàng Sơn</h3>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna orci auctor vitae nisl. Erat fringilla pellentesque amet tempus. Commodo mi vitae, sagittis blandit.
+                                                <p>Cô gái bé nhỏ như mang biểu tượng cho ánh sáng và sự sống chú cừu bằng biểu tượng của Cung Bạch Dương. Cô gái ấy mang trong mình tinh thần lạc quan và luôn đem đến nguồn năng lượng tích cực cho mọi  người xung quanh.
                                                 </p>
                                                 <div class="social">
                                                     <ul>
@@ -214,7 +214,7 @@
                                             </div>
                                             <div class="couple-text">
                                                 <h3>Biện Việt</h3>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna orci auctor vitae nisl. Erat fringilla pellentesque amet tempus. Commodo mi vitae, sagittis blandit.
+                                                <p> Chàng trai cung Bạch Dương mang trong mình sự nhiệt tình, mạnh mẽ, dám đối mặt với khó khăn. Trong tình yêu, chàng trai ấy là một con người chân thành và xem mối quan hệ là một trải nghiệm tuyệt vời.
                                                 </p>
                                                 <div class="social">
                                                     <ul>
@@ -268,8 +268,9 @@
                                             <img src="assets/images/story/pin.svg" alt="">
                                         </div>
                                     </div>
-                                    <h3>Chúng ta gặp nhau như thế nào</h3>
-                                    <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim tortor, faucibus netus orci donec volutpat adipiscing. Sit condimentum elit convallis libero. Nunc in eu tellus ipsum placerat.</p>
+                            
+                                    <!-- <h3>Chúng ta gặp nhau như thế nào</h3> -->
+                                    <p class="pt-5">Sau một thời gian tìm hiểu tương đối là kỹ càng, chúng tôi đã quyết định về chung " Một nhà "</p>
                                     <div class="flower">
                                         <img src="assets/images/story/flower.svg" alt="">
                                     </div>
@@ -304,8 +305,8 @@
                                             <img src="assets/images/story/pin.svg" alt="">
                                         </div>
                                     </div>
-                                    <h3>Anh ngỏ lời, tôi đồng ý</h3>
-                                    <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim tortor, faucibus netus orci donec volutpat adipiscing. Sit condimentum elit convallis libero. Nunc in eu tellus ipsum placerat.</p>
+                                    <!-- <h3>Anh ngỏ lời, tôi đồng ý</h3> -->
+                                    <p class="pt-2"> Chàng trai sinh ra ở quê hương Hà Tĩnh, cùng cô gái Đà Nẵng bé nhỏ, chúng mình dã bén duyên nhau để cuối cùng cũng kết thành quả ngọt, để gọi nhau hai tiếng "vợ chồng". Chúng tớ hiểu rằng, hôn nhân mới là sự khởi đầu của quá trình dài phía trước, cả hai sẽ cố gắng thật nhiều để hạnh phúc từng giây phút bên nha.</p>
                                     <div class="flower">
                                         <img src="assets/images/story/flower-2.svg" alt="">
                                     </div>
@@ -340,8 +341,8 @@
                                             <img src="assets/images/story/pin.svg" alt="">
                                         </div>
                                     </div>
-                                    <h3>Ngày đính hôn của chúng tôi</h3>
-                                    <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim tortor, faucibus netus orci donec volutpat adipiscing. Sit condimentum elit convallis libero. Nunc in eu tellus ipsum placerat.</p>
+                                    <!-- <h3>Ngày đính hôn của chúng tôi</h3> -->
+                                    <p class="pt-5">Ngày vui Việt - Sơn hẳn sẽ thiếu sót nếu thiếu đi sự hiện diện của quý Anh/Chị/Bạn bè và người thân.</p>
                                     <div class="flower">
                                         <img src="assets/images/story/flower.svg" alt="">
                                     </div>
