--- a/index.html
+++ b/index.html
@@ -183,15 +183,15 @@
                                             </div>
                                             <div class="couple-text">
                                                 <h3>Hoàng Sơn</h3>
-                                                <p>Cô gái bé nhỏ như mang biểu tượng cho ánh sáng và sự sống chú cừu bằng biểu tượng của Cung Bạch Dương. Cô gái ấy mang trong mình tinh thần lạc quan và luôn đem đến nguồn năng lượng tích cực cho mọi  người xung quanh.
+                                                <p>Cô gái mang trong mình tinh thần lạc quan và luôn đem đến nguồn năng lượng tích cực cho mọi  người xung quanh.
                                                 </p>
-                                                <div class="social">
+                                                <!-- <div class="social">
                                                     <ul>
                                                         <li><a href="#"><i class="ti-facebook"></i></a></li>
                                                         <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
                                                         <li><a href="#"><i class="ti-instagram"></i></a></li>
                                                     </ul>
-                                                </div>
+                                                </div> -->
                                             </div>
                                             <div class="round-shape">
                                                 <div class="inner"></div>
@@ -214,15 +214,15 @@
                                             </div>
                                             <div class="couple-text">
                                                 <h3>Biện Việt</h3>
-                                                <p> Chàng trai cung Bạch Dương mang trong mình sự nhiệt tình, mạnh mẽ, dám đối mặt với khó khăn. Trong tình yêu, chàng trai ấy là một con người chân thành và xem mối quan hệ là một trải nghiệm tuyệt vời.
+                                                <p> Chàng trai mang trong mình sự nhiệt tình, mạnh mẽ, dám đối mặt với khó khăn. Trong tình yêu, chàng trai ấy là một con người chân thành và xem mối quan hệ là một trải nghiệm tuyệt vời.
                                                 </p>
-                                                <div class="social">
+                                                <!-- <div class="social">
                                                     <ul>
                                                         <li><a href="#"><i class="ti-facebook"></i></a></li>
                                                         <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
                                                         <li><a href="#"><i class="ti-instagram"></i></a></li>
                                                     </ul>
-                                                </div>
+                                                </div> -->
                                             </div>
                                             <div class="round-shape">
                                                 <div class="inner"></div>
@@ -249,8 +249,8 @@
         <section class="wpo-story-section-s2 section-padding" id="story">
             <div class="container">
                 <div class="wpo-section-title">
-                    <span>Câu chuyện của chúng ta</span>
-                    <h2>Nó xảy ra như thế nào</h2>
+                    <span>Câu chuyện của chúng tớ</span>
+                    <h2>Đơn giản và ngọt ngào</h2>
                 </div>
                 <div class="wpo-story-wrap">
                     <div class="wpo-story-item">
@@ -263,14 +263,14 @@
                             <div class="col col-lg-6 col-12">
                                 <div class="wpo-story-content wow flipInX" data-wow-duration="1000ms">
                                     <div class="thumb">
-                                        <span>15 June 2014</span>
+                                        <span>14/02 2023</span>
                                         <div class="pin">
                                             <img src="assets/images/story/pin.svg" alt="">
                                         </div>
                                     </div>
                             
                                     <!-- <h3>Chúng ta gặp nhau như thế nào</h3> -->
-                                    <p class="pt-5">Sau một thời gian tìm hiểu tương đối là kỹ càng, chúng tôi đã quyết định về chung " Một nhà "</p>
+                                    <p class="pt-5">Chàng trai sinh ra ở quê hương Hà Tĩnh, cùng cô gái Đà Nẵng bé nhỏ, chúng mình dã bén duyên nhau để cuối cùng cũng kết thành quả ngọt, để gọi nhau hai tiếng "vợ chồng". </p>
                                     <div class="flower">
                                         <img src="assets/images/story/flower.svg" alt="">
                                     </div>
@@ -300,13 +300,13 @@
                             <div class="col col-lg-6 col-12 order-lg-1 order-2">
                                 <div class="wpo-story-content wow flipInX" data-wow-duration="1000ms">
                                     <div class="thumb">
-                                        <span>12 Dec 2019</span>
+                                        <span>25/09 2023</span>
                                         <div class="pin">
                                             <img src="assets/images/story/pin.svg" alt="">
                                         </div>
                                     </div>
                                     <!-- <h3>Anh ngỏ lời, tôi đồng ý</h3> -->
-                                    <p class="pt-2"> Chàng trai sinh ra ở quê hương Hà Tĩnh, cùng cô gái Đà Nẵng bé nhỏ, chúng mình dã bén duyên nhau để cuối cùng cũng kết thành quả ngọt, để gọi nhau hai tiếng "vợ chồng". Chúng tớ hiểu rằng, hôn nhân mới là sự khởi đầu của quá trình dài phía trước, cả hai sẽ cố gắng thật nhiều để hạnh phúc từng giây phút bên nha.</p>
+                                    <p class="pt-5">Chúng tớ hiểu rằng, hôn nhân mới là sự khởi đầu của quá trình dài phía trước, cả hai sẽ cố gắng thật nhiều để hạnh phúc từng giây phút bên nha.                      </p>
                                     <div class="flower">
                                         <img src="assets/images/story/flower-2.svg" alt="">
                                     </div>
@@ -336,13 +336,13 @@
                             <div class="col col-lg-6 col-12">
                                 <div class="wpo-story-content wow flipInX" data-wow-duration="1000ms">
                                     <div class="thumb">
-                                        <span>16 Jan 2022</span>
+                                        <span>31/12 2023</span>
                                         <div class="pin">
                                             <img src="assets/images/story/pin.svg" alt="">
                                         </div>
                                     </div>
                                     <!-- <h3>Ngày đính hôn của chúng tôi</h3> -->
-                                    <p class="pt-5">Ngày vui Việt - Sơn hẳn sẽ thiếu sót nếu thiếu đi sự hiện diện của quý Anh/Chị/Bạn bè và người thân.</p>
+                                    <p class="pt-5">Ngày vui Việt - Sơn hẳn sẽ thiếu sót nếu thiếu đi sự hiện diện của quý Anh/Chị/Bạn bè và người thân. Cảm ơn bạn vì đã trở thành một phần quan trọng trong ngày đặt biệt của chúng tớ!</p>
                                     <div class="flower">
                                         <img src="assets/images/story/flower.svg" alt="">
                                     </div>
