--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="Biện Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" name="Title" />
     <meta content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" name="Description" />
     <meta content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" name="Keyword" />
-    <meta property="og:title" content="Biện Việt❤Hoàng Sơn Mời bạn đến dự đám cưới" />
+    <meta property="og:title" content="Biện Việt❤Hoàng Sơn Mời bạn đến dự đám cưới nhà gái" />
     <meta property="og:description" content="Ngày 31/12/2023, Chủ nhật, Lúc 10h30" />
     <meta property="og:url" content="https://18thanhthuy18.github.io/wedding-invaitation/" />
     <meta property="og:image" content="https://s.pinimg.com/images/facebook_share_image.png" />
@@ -577,7 +577,7 @@
                                         <li><h4>Tư gia nữ</h4></li>
                                         <li>Tổ 4, Thôn Túy Loan Đông 1, Hòa Phong, Hòa Vang, TP Đà Nẵng</li>
                                         <li><a href="tel:0706097503"><i class="ti-mobile"></i> 0706 097 503 </a></li>
-                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/7ugdkVBAqQEJwEBr7"><i class="ti-map-alt"></i> <i class="ti-map-alt"></i> Xem địa chỉ</a></li> 
+                                        <!-- <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/7ugdkVBAqQEJwEBr7"><i class="ti-map-alt"></i> <i class="ti-map-alt"></i> Xem địa chỉ</a></li>  -->
                                     </ul>
                                 </div>
                             </div>
@@ -598,7 +598,7 @@
                                         <li><h4>Tư gia nam</h4></li>
                                         <li>Thôn Tân Vĩnh Cần, Tân Hưng, Cẩm Thành, Cẩm Xuyên, Hà Tĩnh </li>
                                         <li><a href="tel:0706097503"><i class="ti-mobile"></i> 0706 097 503 </a></li>
-                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/gtuhV8drpJxNz1wu5"><i class="ti-map-alt"></i> Xem địa chỉ</a></li>
+                                        <!-- <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/gtuhV8drpJxNz1wu5"><i class="ti-map-alt"></i> Xem địa chỉ</a></li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -619,7 +619,7 @@
                                         <li><h4>Nhà hàng Trung Sơn</h4></li>
                                         <li>Cầu Giăng, Hòa Nhơn, Hòa Vang, TP Đà Nẵng</li>
                                         <li><a href="tel:0706097503"><i class="ti-mobile"></i> 0706 097 503 </a></li>
-                                        <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/qRoMoqLmJegAWzj67"><i class="ti-map-alt"></i> Xem địa chỉ</a></li>
+                                        <!-- <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/qRoMoqLmJegAWzj67"><i class="ti-map-alt"></i> Xem địa chỉ</a></li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -652,7 +652,7 @@
                                                 <li>Chủ nhật, Ngày 31/12/2023 <br> 10:30 AM </li>
                                                 <li>Nhà hàng Trung Sơn, Cầu Giăng, Hòa Nhơn, Hòa Vang, TP Đà Nẵng</li>
                                                 <li><a href="tel:0706097503"><i class="ti-mobile"></i> 0706 097 503 </a></li>
-                                                <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/qRoMoqLmJegAWzj67"><i class="ti-map-alt"></i> Xem địa chỉ</a></li>
+                                                <!-- <li> <a class="popup-gmaps" href="https://maps.app.goo.gl/qRoMoqLmJegAWzj67"><i class="ti-map-alt"></i> Xem địa chỉ</a></li> -->
 
                                             </ul>
                                         </div>
