--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                     </div>
                             
                                     <!-- <h3>Chúng ta gặp nhau như thế nào</h3> -->
-                                    <p class="pt-5">Chàng trai sinh ra ở quê hương Hà Tĩnh, cùng cô gái Đà Nẵng bé nhỏ, chúng mình dã bén duyên nhau để cuối cùng cũng kết thành quả ngọt, để gọi nhau hai tiếng "vợ chồng". </p>
+                                    <p class="pt-5">Chàng trai sinh ra ở quê hương Hà Tĩnh, cùng cô gái Đà Nẵng bé nhỏ, chúng mình đã bén duyên nhau để cuối cùng cũng kết thành quả ngọt, để gọi nhau hai tiếng "vợ chồng". </p>
                                     <div class="flower">
                                         <img src="assets/images/story/flower.svg" alt="">
                                     </div>
@@ -306,7 +306,7 @@
                                         </div>
                                     </div>
                                     <!-- <h3>Anh ngỏ lời, tôi đồng ý</h3> -->
-                                    <p class="pt-5">Chúng tớ hiểu rằng, hôn nhân mới là sự khởi đầu của quá trình dài phía trước, cả hai sẽ cố gắng thật nhiều để hạnh phúc từng giây phút bên nha.                      </p>
+                                    <p class="pt-5">Chúng tớ hiểu rằng, hôn nhân mới là sự khởi đầu của quá trình dài phía trước, cả hai sẽ cố gắng thật nhiều để hạnh phúc từng giây phút bên nhau.                      </p>
                                     <div class="flower">
                                         <img src="assets/images/story/flower-2.svg" alt="">
                                     </div>
